--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -7,6 +7,11 @@ body {
   padding: 5px;
 }
 
+header {
+  background-color: black;
+  color: white;
+}
+
 section {
   width: 100%;
   height: 100%;
