--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -10,6 +10,7 @@ body {
 header {
   background-color: black;
   color: white;
+  padding: 5px;
 }
 
 section {
@@ -63,7 +64,6 @@ li p {
 }
 
 footer {
-  width: 100%;
   position: relative;
 }
 
@@ -92,8 +92,12 @@ input[type="text"] {
   font-size: 16px;
   margin-left: 205px;
   padding: 10px;
-  width: 100%;
   border: solid 0px #ccc;
   outline: none;
   color: #eee;
+}
+
+input[type="submit"] {
+  float: right;
+  padding: 10px;
 }
